--- a/grep/CMakeLists.txt
+++ b/grep/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required (VERSION 3.2)
-SET(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package (Threads)
-add_executable (grep "grep.cpp" "grep.h" "is_binary.cpp" "is_binary.h" "lock_free_queue.h")
+add_executable (grep "main.cpp" "grep.cpp" "grep.h" "is_binary.cpp" "is_binary.h" "lock_free_queue.h")
 target_link_libraries (grep Threads::Threads)
